added more features

--- a/layouts/adminBoilerplate.ejs
+++ b/layouts/adminBoilerplate.ejs
@@ -38,6 +38,9 @@
                 <a href="/admin/student">Student</a>
             </div>
             <div class="nav-element">
+                <a href="/admin/faculty">Faculty</a>
+            </div>
+            <div class="nav-element">
                 <a href="/admin/attendance">Attendance</a>
             </div>
             <div class="nav-element">
