added more files

--- a/layouts/facultyBoilerplate.ejs
+++ b/layouts/facultyBoilerplate.ejs
@@ -29,7 +29,7 @@
         </div>
         <div class="offcanvas-body">
             <div class="nav-element">
-                <a href="/faculty/courses">Dashboard</a>
+                <a href="/faculty/dashboard">Dashboard</a>
             </div>
             <div class="nav-element">
                 <a href="/faculty/create">Create a course</a>
